--- a/Notebooks/2_EDA.Rmd
+++ b/Notebooks/2_EDA.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Data Cleaning and Exploratory Data Analysis
 
-This R markdown document will be used to perform Exploratory Data Analysis (EDA) on the merged_df_raw that was developed in the previous workbook `1_data_extraction.Rmd`. 
+This R markdown document will be used to perform Exploratory Data Analysis (EDA) on the merged_df_raw that was developed in the previous workbook `1_data_extraction.Rmd`.
 
 ## Data Importing
 
@@ -24,11 +24,11 @@ library(here)
 library(naniar)
 ```
 
-
 ```{r data_import}
 merged_df <- read_csv('../Data/Raw/merged_df_raw.csv')
 head(merged_df)
 ```
+
 ## Categorical Conversions
 
 ```{r}
@@ -184,7 +184,6 @@ merged_df <- merged_df %>%
   mutate(thal = ifelse(thal == 5, NA, thal))
 ```
 
-
 ## Data Cleaning
 
 This below section of code starts by removing columns that are unused as indicated by the hear-disease.names text file which serves as a data dictionary and source for information on all the data sets. Once the explicitly unnecessary columns are removed, we convert the -9's and -9.0's into NA values and set a threshold for feature removal of if the feature is missing more than 60% of the observations it is immediately dropped. Once these features have been removed we focus on removing near zero variance features.
@@ -255,11 +254,7 @@ write.csv(df_cleaning, here("Data/Clean", "heart_disease_cleaned.csv"), row.name
 saveRDS(df_cleaning, here("Data/Clean", "heart_disease_cleaned.rds"))
 ```
 
-In the process of removing variables with >60% missing data, the `ca`
-variable, which represents _Major vessels via fluoroscopy_ was removed
-due to having 67.6% missing data. This variable was part of the 
-_cleveland-14_ set. It has re-added to the final data set after _nzv_ variables
-were removed. 
+In the process of removing variables with \>60% missing data, the `ca` variable, which represents *Major vessels via fluoroscopy* was removed due to having 67.6% missing data. This variable was part of the *cleveland-14* set. It has re-added to the final data set after *nzv* variables were removed.
 
 ## Exploratory Data Analysis
 
@@ -285,18 +280,20 @@ aggr(df, numbers = TRUE, sortVars = TRUE, cex.axis = 0.7)
 gg_miss_upset(df, nsets = 10)
 ```
 
-##### Variables Missing > 40%
-- ca: cleveland-14 variable - represents # of major vessels (0 - 3) colored by fluoroscopy.
-- thal: cleveland-14 variable - results from thallium stress test
-- thaltime: time duration for thallium stress test
-- years: number of years as a smoker
-- rldv5: height at rest
-- famhist: family history of coronary artery disease
-- cigs: cigarettes smoked per day
+##### Variables Missing \> 40%
+
+-   ca: cleveland-14 variable - represents \# of major vessels (0 - 3) colored by fluoroscopy.
+-   thal: cleveland-14 variable - results from thallium stress test
+-   thaltime: time duration for thallium stress test
+-   years: number of years as a smoker
+-   rldv5: height at rest
+-   famhist: family history of coronary artery disease
+-   cigs: cigarettes smoked per day
 
 ##### Upset
-- based on upset table, `ca`, `thal`, and `thaltime` are missing together
-- missingness might not be random
+
+-   based on upset table, `ca`, `thal`, and `thaltime` are missing together
+-   missingness might not be random
 
 ```{r custom_functions}
 # function for showing histogram
@@ -334,6 +331,7 @@ show_barplot <- function(dataframe, feature) {
 ```
 
 #### ca
+
 ```{r ca}
 
 show_histogram(df, ca)
@@ -345,23 +343,39 @@ df <- df %>%
     ca_missing = ifelse(is.na(ca), 1, 0),
     ca_imputed = ifelse(is.na(ca), median(ca, na.rm = TRUE), ca)
   )
+
+# drop imputed column
+df <- df %>%
+  select(-ca)
 ```
 
+`ca` has a right skew therefore median was used for imputation.
+
 #### thal
+
 ```{r thal}
 show_histogram(df, thal)
 show_densityplot(df, thal)
 table(df$thal)
 
+# one value is 4, possible entry error
+df$thal[df$thal == 4] <- NA
 # impute with mode and missingness flag
 df <- df %>%
   mutate(
     thal_missing = ifelse(is.na(df$thal), 1, 0),
     thal_imputed = ifelse(is.na(df$thal), 3, df$thal) # mode imputation
   )
+
+# drop imputed column
+df <- df %>%
+  select(-thal)
 ```
 
+One value was recorded as `4` which is not valid in the data dictionary. This was replaced with NA. Then imputation using mode was performed.
+
 #### thaltime
+
 ```{r thaltime}
 summary(df$thaltime)
 sort(table(df$thaltime), decreasing = TRUE)
@@ -376,9 +390,16 @@ df <- df %>%
     thaltime_missing = ifelse(is.na(thaltime), 1, 0),
     thaltime_imputed = ifelse(is.na(thaltime), median(thaltime, na.rm = TRUE), thaltime)
   )
+
+# drop imputed column
+df <- df %>%
+  select(-thaltime)
 ```
 
+`thaltime` showed a right skew. Imputed with median.
+
 #### years + cigs
+
 ```{r}
 show_histogram(df, years)
 show_densityplot(df, years) 
@@ -390,6 +411,7 @@ ggplot(df, aes(x = years, y = cigs)) + geom_point()
 cor(df$years, df$cigs, use = "complete.obs", method = "pearson")
 
 # create smoke_profile feature
+# generative AI was used to create this code to create the smoke_profile feature
 df <- df %>%
   mutate(
     # Categorize smoking duration
@@ -426,8 +448,16 @@ df <- df %>%
 # drop helper columns
 df <- df %>%
   select(-c(cigs_cat, years_cat))
+
+# drop imputed column
+df <- df %>%
+  select(-c(years, cigs))
 ```
+
+`years` and `cigs` has moderate colinearity. Due to missing data, a `smoke_profile` was engineered to combine the two columns.
+
 #### rldv5
+
 ```{r rldv5}
 show_histogram(df, rldv5)
 show_densityplot(df, rldv5)
@@ -437,9 +467,16 @@ df <- df %>%
     rldv5_missing = ifelse(is.na(rldv5), 1, 0), 
     rldv5_imputed = ifelse(is.na(rldv5), median(rldv5, na.rm = TRUE), rldv5)
   )
+
+# drop imputed column
+df <- df %>%
+  select(-rldv5)
 ```
 
+`rldv5` has a right skew therefore imputed with median.
+
 #### famhist
+
 ```{r famhist}
 show_barplot(df, famhist)
 unique(df$famhist)
@@ -451,20 +488,24 @@ df$famhist <- factor(df$famhist)
 
 show_barplot(df, famhist)
 ```
-### Drop originaal columns after imputation
+
+Missing values in `famhist` were imputed with 'missing'.
+
+### Drop original columns after imputation
+
 ```{r drop_imputed_gt40}
 # list of cols
-missing_gt40 <- c('ca', 'thal', 'thaltime', 'years', 'rldv5', 'famhist', 'cigs')
+# missing_gt40 <- c('ca', 'thal', 'thaltime', 'years', 'rldv5', 'famhist', 'cigs')
 imputed_cols <-c('ca_imputed', 'ca_missing', 'thal_imputed', 'thal_missing', 
                  'thaltime_missing', 'thaltime_imputed', 'smoke_profile', 
                  'rldv5_missing', 'rldv5_imputed', 'famhist')
 # drop cols that were imputed
-df1 <- df %>%
-  select(-all_of(missing_gt40))
+# df1 <- df %>%
+#   select(-all_of(missing_gt40))
 
 # drop date / time columns
 drop_cols <- c('cmo', 'cday', 'cyr', 'ekgmo', 'ekgday', 'ekgyr')
-df1 <- df1 %>%
+df1 <- df %>%
   select(-all_of(drop_cols))
 
 # compare dimensions
@@ -476,6 +517,8 @@ colnames(df1)
 
 head(df1)
 ```
+
+## Missing < 40% 
 
 ### Binary Variables
 
@@ -498,7 +541,10 @@ df$sex <- factor(df$sex, levels = c(0, 1), labels = c("female", "male"))
 head(df1)
 ```
 
-### Numerical Variables 
+Binary variables were converted to factors. 
+Sex variable was converted to explicitly "female", "male"
+
+### Numerical Variables
 
 ```{r numerical_with_na}
 numeric_vars <- df1 %>%
@@ -526,8 +572,10 @@ df1 <- df1 %>%
 dim(df1)
 ```
 
+Numerical variables were imputed with the median value. Missing flags were also created for these variables. 
 
 ### Categorical Variables
+
 ```{r categorical_with_na}
 
 categorical_na <- df1 %>%
@@ -545,7 +593,10 @@ dim(df1)
 
 anyNA(df1)
 ```
-#### Create binary for target (num) 
+For NAs in categorical variables, NAs were replaced with 'Missing'. 
+
+#### Create binary for target (num)
+
 ```{r}
 # create binary target 0 = no disease, 1 - 3 = varying levels
 df1 <- df1 %>%
@@ -555,8 +606,10 @@ df1 <- df1 %>%
 
 head(df1)
 ```
+Binary target column for the target variable `num` was created. This column was left in. 
+
 ```{r export_imputed}
+# export final dataset
 saveRDS(df1, here("Data/Clean", "heart_disease_final.rds"))
 
 ```
-
