--- a/Notebooks/2_EDA.Rmd
+++ b/Notebooks/2_EDA.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Data Cleaning and Exploratory Data Analysis
 
-This R markdown document will be used to perform Exploratory Data Analysis (EDA) on the merged_df_raw that was developed in the previous workbook `1_data_extraction.Rmd`. 
+This R markdown document will be used to perform Exploratory Data Analysis (EDA) on the merged_df_raw that was developed in the previous workbook `1_data_extraction.Rmd`.
 
 ## Data Importing
 
@@ -19,13 +19,16 @@ library(tidyverse)
 library(readr)
 library(ggplot2)
 library(corrplot)
+library(caret)
+library(here)
+library(naniar)
 ```
-
 
 ```{r data_import}
 merged_df <- read_csv('../Data/Raw/merged_df_raw.csv')
 head(merged_df)
 ```
+
 ## Categorical Conversions
 
 ```{r}
@@ -181,7 +184,6 @@ merged_df <- merged_df %>%
   mutate(thal = ifelse(thal == 5, NA, thal))
 ```
 
-
 ## Data Cleaning
 
 This below section of code starts by removing columns that are unused as indicated by the hear-disease.names text file which serves as a data dictionary and source for information on all the data sets. Once the explicitly unnecessary columns are removed, we convert the -9's and -9.0's into NA values and set a threshold for feature removal of if the feature is missing more than 60% of the observations it is immediately dropped. Once these features have been removed we focus on removing near zero variance features.
@@ -243,22 +245,371 @@ df_cleaning <- df_cleaning %>%
 
 # add back ca column for EDA
 df_cleaning$ca <- merged_df$ca
-df_cleaning$ca <- na_if(df_cleaning$ca, "-9")
+df_cleaning$ca <- na_if(df_cleaning$ca, -9)
 
 dim(df_cleaning)
 
 # export to file
 write.csv(df_cleaning, here("Data/Clean", "heart_disease_cleaned.csv"), row.names = FALSE)
+saveRDS(df_cleaning, here("Data/Clean", "heart_disease_cleaned.rds"))
 ```
 
-In the process of removing variables with >60% missing data, the `ca`
-variable, which represents _Major vessels via fluoroscopy_ was removed
-due to having 67.6% missing data. This variable was part of the 
-_cleveland-14_ set. It has re-added to the final data set after _nzv_ variables
-were removed. 
+In the process of removing variables with \>60% missing data, the `ca` variable, which represents *Major vessels via fluoroscopy* was removed due to having 67.6% missing data. This variable was part of the *cleveland-14* set. It has re-added to the final data set after *nzv* variables were removed.
 
 ## Exploratory Data Analysis
 
 ```{r EDA}
+df <- readRDS(here("Data/Clean", "heart_disease_cleaned.rds"))
+# head(df)
+
+missing_var <- df %>%
+  summarise(across(everything(), ~ mean(is.na(.)))) %>%
+  pivot_longer(everything(), names_to = "variable", values_to = "missing_pct")
+
+missing_var %>%
+  filter(missing_pct > 0) %>%
+  arrange(desc(missing_pct))
+
+# visualize missingness by variable
+gg_miss_var(df)
+
+# missingness patterns
+library(VIM)
+aggr(df, numbers = TRUE, sortVars = TRUE, cex.axis = 0.7)
+# missingness correlation
+gg_miss_upset(df, nsets = 10)
+```
+
+##### Variables Missing \> 40%
+
+-   ca: cleveland-14 variable - represents \# of major vessels (0 - 3) colored by fluoroscopy.
+-   thal: cleveland-14 variable - results from thallium stress test
+-   thaltime: time duration for thallium stress test
+-   years: number of years as a smoker
+-   rldv5: height at rest
+-   famhist: family history of coronary artery disease
+-   cigs: cigarettes smoked per day
+
+##### Upset
+
+-   based on upset table, `ca`, `thal`, and `thaltime` are missing together
+-   missingness might not be random
+
+```{r custom_functions}
+# function for showing histogram
+show_histogram <- function(dataframe, feature) {
+  ggplot(dataframe, aes(x = {{feature}})) + 
+    geom_histogram(binwidth = 1, fill = "steelblue", color = "white") + 
+  labs(
+    title = paste("Histogram of", rlang::as_label(enquo(feature))), 
+    x = rlang::as_label(enquo(feature)), 
+    y = "Count"
+  ) + 
+  theme_minimal()
+}
+# function for showing desnsity plot
+show_densityplot <- function(dataframe, feature) {
+  ggplot(df, aes(x = {{ feature }})) +
+    geom_density(fill = "darkorange", alpha = 0.5) +
+    labs(
+      title = paste("Density Plot of", rlang::as_label(enquo(feature))), 
+      x = rlang::as_label(enquo(feature)), 
+      y = "Count"
+    ) +
+    theme_minimal()
+}
+
+show_barplot <- function(dataframe, feature) {
+  ggplot(dataframe, aes(x = {{feature}})) +
+  geom_bar(fill = "steelblue") +
+  labs(
+    title = paste("Bar Plot of", rlang::as_label(enquo(feature))), 
+      x = rlang::as_label(enquo(feature)),  
+    y = "Count") +
+  theme_minimal()
+}
+```
+
+#### ca
+
+```{r ca}
+
+show_histogram(df, ca)
+show_densityplot(df, ca)
+
+# impute with median and missingness flag
+df <- df %>%
+  mutate(
+    ca_missing = ifelse(is.na(ca), 1, 0),
+    ca_imputed = ifelse(is.na(ca), median(ca, na.rm = TRUE), ca)
+  )
+
+# drop imputed column
+df <- df %>%
+  select(-ca)
+```
+
+`ca` has a right skew therefore median was used for imputation.
+
+#### thal
+
+```{r thal}
+show_histogram(df, thal)
+show_densityplot(df, thal)
+table(df$thal)
+
+# one value is 4, possible entry error
+df$thal[df$thal == 4] <- NA
+# impute with mode and missingness flag
+df <- df %>%
+  mutate(
+    thal_missing = ifelse(is.na(df$thal), 1, 0),
+    thal_imputed = ifelse(is.na(df$thal), 3, df$thal) # mode imputation
+  )
+
+# drop imputed column
+df <- df %>%
+  select(-thal)
+```
+
+One value was recorded as `4` which is not valid in the data dictionary. This was replaced with NA. Then imputation using mode was performed.
+
+#### thaltime
+
+```{r thaltime}
+summary(df$thaltime)
+sort(table(df$thaltime), decreasing = TRUE)
+
+# histogram
+show_histogram(df, thaltime)
+show_densityplot(df, thaltime)
+
+# impute with median + missingness flag
+df <- df %>%
+  mutate(
+    thaltime_missing = ifelse(is.na(thaltime), 1, 0),
+    thaltime_imputed = ifelse(is.na(thaltime), median(thaltime, na.rm = TRUE), thaltime)
+  )
+
+# drop imputed column
+df <- df %>%
+  select(-thaltime)
+```
+
+`thaltime` showed a right skew. Imputed with median.
+
+#### years + cigs
+
+```{r}
+show_histogram(df, years)
+show_densityplot(df, years) 
+
+show_histogram(df, cigs)
+show_densityplot(df, cigs)
+
+ggplot(df, aes(x = years, y = cigs)) + geom_point()
+cor(df$years, df$cigs, use = "complete.obs", method = "pearson")
+
+# create smoke_profile feature
+# generative AI was used to create this code to create the smoke_profile feature
+df <- df %>%
+  mutate(
+    # Categorize smoking duration
+    years_cat = case_when(
+      is.na(years)        ~ "missing",
+      years == 0          ~ "non",
+      years <= 10         ~ "short",
+      years <= 20         ~ "medium",
+      years <= 40         ~ "long",
+      TRUE                ~ "very_long"
+    ),
+
+    # Categorize cigarette intensity
+    cigs_cat = case_when(
+      is.na(cigs)         ~ "missing",
+      cigs == 0           ~ "non",
+      cigs <= 10          ~ "light",
+      cigs <= 20          ~ "moderate",
+      cigs <= 40          ~ "heavy",
+      TRUE                ~ "very_heavy"
+    ),
+
+    # Combine into single profile
+    smoke_profile = case_when(
+      years_cat == "non" & cigs_cat == "non"             ~ "non",
+      years_cat == "missing" | cigs_cat == "missing"     ~ "missing",
+      TRUE                                                ~ paste0(cigs_cat, "_", years_cat)
+    ),
+
+    # Optional: convert to factor
+    smoke_profile = factor(smoke_profile)
+  )
+
+# drop helper columns
+df <- df %>%
+  select(-c(cigs_cat, years_cat))
+
+# drop imputed column
+df <- df %>%
+  select(-c(years, cigs))
+```
+
+`years` and `cigs` has moderate colinearity. Due to missing data, a `smoke_profile` was engineered to combine the two columns.
+
+#### rldv5
+
+```{r rldv5}
+show_histogram(df, rldv5)
+show_densityplot(df, rldv5)
+
+df <- df %>%
+  mutate(
+    rldv5_missing = ifelse(is.na(rldv5), 1, 0), 
+    rldv5_imputed = ifelse(is.na(rldv5), median(rldv5, na.rm = TRUE), rldv5)
+  )
+
+# drop imputed column
+df <- df %>%
+  select(-rldv5)
+```
+
+`rldv5` has a right skew therefore imputed with median.
+
+#### famhist
+
+```{r famhist}
+show_barplot(df, famhist)
+unique(df$famhist)
+
+# replace NA with "Missing" 
+df$famhist <- as.character(df$famhist)
+df$famhist[is.na(df$famhist)] <- "Missing"
+df$famhist <- factor(df$famhist)
+
+show_barplot(df, famhist)
+```
+
+Missing values in `famhist` were imputed with 'missing'.
+
+### Drop original columns after imputation
+
+```{r drop_imputed_gt40}
+# list of cols
+# missing_gt40 <- c('ca', 'thal', 'thaltime', 'years', 'rldv5', 'famhist', 'cigs')
+imputed_cols <-c('ca_imputed', 'ca_missing', 'thal_imputed', 'thal_missing', 
+                 'thaltime_missing', 'thaltime_imputed', 'smoke_profile', 
+                 'rldv5_missing', 'rldv5_imputed', 'famhist')
+# drop cols that were imputed
+# df1 <- df %>%
+#   select(-all_of(missing_gt40))
+
+# drop date / time columns
+drop_cols <- c('cmo', 'cday', 'cyr', 'ekgmo', 'ekgday', 'ekgyr')
+df1 <- df %>%
+  select(-all_of(drop_cols))
+
+# compare dimensions
+dim(df_cleaning)
+dim(df)
+dim(df1)
+
+colnames(df1)
+
+head(df1)
+```
+
+## Missing < 40% 
+
+### Binary Variables
+
+```{r remaining_cols}
+# list binary var
+df1 %>% 
+  summarise(across(everything(), ~ n_distinct(na.omit(.)))) %>%
+  pivot_longer(everything(), names_to = "variable", values_to = "n_unique") %>%
+  filter(n_unique == 2)
+# get binary var names
+binary_vars <- df1 %>%
+  select(where(~ n_distinct(na.omit(.)) == 2)) %>%
+  names()
+
+# convert binary vars to factors
+df1[binary_vars] <- lapply(df1[binary_vars], as.factor)
+# convert sex to male/female
+df$sex <- factor(df$sex, levels = c(0, 1), labels = c("female", "male"))
+
+head(df1)
+```
+
+Binary variables were converted to factors. 
+Sex variable was converted to explicitly "female", "male"
+
+### Numerical Variables
+
+```{r numerical_with_na}
+numeric_vars <- df1 %>%
+  select(where(is.numeric)) %>%
+  names() 
+
+numeric_na <- df1 %>%
+  select(where(is.numeric)) %>%
+  select(where(~ any(is.na(.)))) %>%
+  names()
+
+numeric_vars
+df1[numeric_na]
+
+# impute w median and create missingness columns
+for (var in numeric_na) {
+  median_val <- median(df1[[var]], na.rm = TRUE)
+  df1[[paste0(var, "_missing")]] <- ifelse(is.na(df1[[var]]), 1, 0)
+  df1[[paste0(var, "_imputed")]] <- ifelse(is.na(df1[[var]]), median_val, df1[[var]])
+}
+
+# drop imputed columns
+df1 <- df1 %>%
+  select(-all_of(numeric_na))
+dim(df1)
+```
+
+Numerical variables were imputed with the median value. Missing flags were also created for these variables. 
+
+### Categorical Variables
+
+```{r categorical_with_na}
+
+categorical_na <- df1 %>%
+  select(where(~ is.factor(.) || is.character(.))) %>%
+  select(where(~ any(is.na(.)))) %>%
+  names()
+
+# impute with Missing
+for (var in categorical_na) {
+  df1[[var]] <- as.character(df1[[var]])
+  df1[[var]][is.na(df1[[var]])] <- "Missing"
+  df1[[var]] <- factor(df1[[var]])
+}
+dim(df1)
+
+anyNA(df1)
+```
+For NAs in categorical variables, NAs were replaced with 'Missing'. 
+
+#### Create binary for target (num)
+
+```{r}
+# create binary target 0 = no disease, 1 - 3 = varying levels
+df1 <- df1 %>%
+  mutate(
+    has_disease = factor(ifelse(num == 0, "No", "Yes"), levels = c("No", "Yes"))
+  )
+
+head(df1)
+```
+Binary target column for the target variable `num` was created. This column was left in. 
+
+```{r export_imputed}
+# export final dataset
+saveRDS(df1, here("Data/Clean", "heart_disease_final.rds"))
 
 ```
