--- a/Notebooks/2_EDA.Rmd
+++ b/Notebooks/2_EDA.Rmd
@@ -526,7 +526,7 @@ binary_vars <- df1 %>%
   names()
 
 # convert binary vars to factors
-#df1[binary_vars] <- lapply(df1[binary_vars], as.factor)
+df1[binary_vars] <- lapply(df1[binary_vars], as.factor)
 # convert sex to male/female
 #df$sex <- factor(df$sex, levels = c(0, 1), labels = c("female", "male"))
 
